# FalcomBGMInfo

./: .gitignore  CMakeLists.txt  README.md
assets/: BgmMap_CS1.yaml  BgmMap_CS2.yaml  BgmMap_CS3.yaml  BgmMap_Celceta.yaml  BgmMap_Nayuta.yaml  BgmMap_Opus.yaml  BgmMap_Reverie.yaml  BgmMap_Sky.yaml  BgmMap_Sky3rd.yaml  BgmMap_SkyFC.yaml  BgmMap_SkySC.yaml  BgmMap_Wav.yaml  BgmMap_XanaduNext.yaml  BgmMap_Ys6.yaml  BgmMap_Ys7.yaml  BgmMap_Ys8.yaml  BgmMap_Ys9.yaml  BgmMap_YsFelghana.yaml  BgmMap_YsOrigin.yaml  bgm_info.dds
src/FalcomModernBGMInfo/: CMakeLists.txt  main_dx11.cpp  universal_proxy_x64.cpp  universal_proxy_x64.def  universal_proxy_x64.h  universal_proxy_x86.cpp  universal_proxy_x86.def
src/FalcomRetroBGMInfo/: CMakeLists.txt  main_dx9.cpp  universal_proxy.def  universal_proxy.h  universal_proxy_x86.h
src/include/: imgui_impl_dx11.h  imgui_impl_win32.h
src/include/imgui/: .gitignore  imgui_widgets.cpp
src/include/imgui/examples/example_glfw_vulkan/: CMakeLists.txt
